# code-eval

./: .gitignore  README.md  pyproject.toml  test.http
code_eval/: dataset_processor.py  evaluator.py  llm.py  main.py
pt/: pt_dataset_processor.py
