[tool.poetry]
name = "code-eval"
version = "0.1.0"
description = "A tool for inline code completion evaluation."
authors = ["yaoyasong"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
